# dunce

./: Cargo.toml
examples/: args-to-paths.rs
src/: lib.rs
